welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:11: error: '<-' expected but ')' found.
for (k<1-hauteur-1) {
                  ^Array1:16: error: illegal start of simple expression
}
^