welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
var hauteur = getMondeHauteur()
var T = new Array[Color](hauteur-1)
var couleur = getSolCouleur()
var nbPas:Int=0

getSolCouleur()
T(nbPas)= couleur
nbPas=nbPas+1
for (k<1-hauteur-1) {
	avance()
	getSolCouleur()
	nbPas=nbPas+1
}
}
